--- a/public/produk.html
+++ b/public/produk.html
@@ -108,7 +108,46 @@
       <div
         class="mx-auto mb-10 max-w-7xl px-2 text-4xl sm:px-21 sm:text-5xl md:max-w-2xl md:px-10 md:text-6xl lg:max-w-7xl"
       >
-        <h2 class="font-dmserif mb-10 text-center">Produk Category</h2>
+        <h2 class="font-dmserif mb-5">Produk Category</h2>
+        <!-- bradcrumd -->
+
+        <nav class="flex" aria-label="Breadcrumb">
+          <ol class="mb-5 inline-flex items-center space-x-1 md:space-x-3">
+            <li class="inline-flex items-center">
+              <a
+                href="index.html"
+                class="hover:text-idekabutton inline-flex items-center text-base font-medium"
+              >
+                Home
+              </a>
+            </li>
+            <li>
+              <div class="flex items-center">
+                <svg
+                  class="mx-1 h-5 w-5"
+                  viewBox="0 0 20 20"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M7.5 15L11.0858 11.4142C11.7525 10.7475 12.0858 10.4142 12.0858 10C12.0858 9.58579 11.7525 9.25245 11.0858 8.58579L7.5 5"
+                    stroke="#b58b75"
+                    stroke-width="1.6"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+                <a
+                  href="produk.html"
+                  class="hover:text-idekabutton text-idekabutton ml-1 text-base font-medium md:ml-2"
+                >
+                  Produk</a
+                >
+              </div>
+            </li>
+          </ol>
+        </nav>
+        <!-- end -->
         <div class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-4">
           <a
             href="undangandigital.html"
