--- a/public/undangandigital.html
+++ b/public/undangandigital.html
@@ -105,53 +105,227 @@
     <!-- navbar end -->
 
     <!-- produk undangan digital -->
-    <section class="mx-auto mt-6 max-w-6xl px-4 py-24">
-      <h2
-        class="font-dmserif mb-10 text-center text-4xl sm:text-5xl md:text-6xl"
-      >
+    <section
+      class="mx-auto mt-6 max-w-86 px-4 py-24 sm:max-w-full sm:px-10 md:max-w-5xl md:px-30 lg:px-3 xl:max-w-full xl:px-10"
+    >
+      <h2 class="font-dmserif mb-5 text-4xl sm:text-5xl md:text-6xl">
         Undangan Digital
       </h2>
 
+      <!-- bradcrumd -->
+
+      <nav class="flex" aria-label="Breadcrumb">
+        <ol class="inline-flex items-center space-x-1 md:space-x-3">
+          <li class="inline-flex items-center">
+            <a
+              href="index.html"
+              class="hover:text-idekabutton inline-flex items-center text-base font-medium"
+            >
+              Home
+            </a>
+          </li>
+          <li>
+            <div class="flex items-center">
+              <svg
+                class="mx-1 h-5 w-5"
+                viewBox="0 0 20 20"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M7.5 15L11.0858 11.4142C11.7525 10.7475 12.0858 10.4142 12.0858 10C12.0858 9.58579 11.7525 9.25245 11.0858 8.58579L7.5 5"
+                  stroke="#b58b75"
+                  stroke-width="1.6"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+              <a
+                href="produk.html"
+                class="hover:text-idekabutton ml-1 text-base font-medium md:ml-2"
+              >
+                Produk</a
+              >
+            </div>
+          </li>
+          <li aria-current="page">
+            <div class="flex items-center">
+              <svg
+                class="mx-1 h-5 w-5"
+                viewBox="0 0 20 20"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M7.5 15L11.0858 11.4142C11.7525 10.7475 12.0858 10.4142 12.0858 10C12.0858 9.58579 11.7525 9.25245 11.0858 8.58579L7.5 5"
+                  stroke="#b58b75"
+                  stroke-width="1.6"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+              <span
+                class="text-idekabuttonhover ml-1 text-base font-medium md:ml-2"
+                >Undangan Digital</span
+              >
+            </div>
+          </li>
+        </ol>
+      </nav>
+
+      <!-- section produk -->
+
       <div
-        class="grid grid-cols-1 gap-8 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4"
+        class="mt-5 grid grid-cols-1 gap-8 sm:grid-cols-2 md:grid-cols-2 md:gap-14 lg:grid-cols-4 lg:gap-4 xl:gap-8"
       >
         <!-- Produk Card -->
-        <div
-          class="relative overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
-        >
-          <img
-            src="https://pagedone.io/asset/uploads/1700726158.png"
-            alt="Produk 1"
-            class="h-64 w-full object-cover"
-          />
+        <a href="">
           <div
-            class="absolute top-3 left-3 rounded-full bg-green-800 px-3 py-1 text-sm text-white"
+            class="relative overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
           >
-            50% off
-          </div>
-          <div class="p-4">
-            <div class="flex items-center justify-between">
-              <p class="text-sm text-gray-500">Undangan Digital</p>
-              <div class="flex items-center text-xl text-yellow-500">
-                <span>★</span>
-                <span class="text-idekatext ml-1 text-lg">4.9</span>
+            <img
+              src="https://pagedone.io/asset/uploads/1700726158.png"
+              alt="Produk 1"
+              class="w-full rounded-xl object-cover sm:h-64"
+            />
+            <div
+              class="bg-idekadiscn absolute top-3 left-3 rounded-full px-3 py-1 text-sm text-white"
+            >
+              50% off
+            </div>
+            <div class="p-4">
+              <div class="flex items-center justify-between">
+                <p class="text-sm text-gray-500">Undangan Digital</p>
+                <div class="flex items-center text-2xl text-yellow-500">
+                  <span>★</span>
+                  <span class="text-idekatext ml-1 text-xl font-semibold"
+                    >4.9</span
+                  >
+                </div>
+              </div>
+
+              <h3 class="text-lg font-semibold">Idekalina Elegan I</h3>
+
+              <div class="mt-2">
+                <span class="text-idekabutton mr-2 text-lg font-bold"
+                  >Rp 200.000</span
+                >
+                <span class="text-gray-500 line-through">Rp 400.000</span>
               </div>
             </div>
+          </div>
+        </a>
+        <!-- 2 -->
+        <a href="">
+          <div
+            class="relative overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
+          >
+            <img
+              src="https://pagedone.io/asset/uploads/1700726158.png"
+              alt="Produk 1"
+              class="w-full rounded-xl object-cover sm:h-64"
+            />
+            <div
+              class="bg-idekadiscn absolute top-3 left-3 rounded-full px-3 py-1 text-sm text-white"
+            >
+              50% off
+            </div>
+            <div class="p-4">
+              <div class="flex items-center justify-between">
+                <p class="text-sm text-gray-500">Undangan Digital</p>
+                <div class="flex items-center text-2xl text-yellow-500">
+                  <span>★</span>
+                  <span class="text-idekatext ml-1 text-xl font-semibold"
+                    >4.9</span
+                  >
+                </div>
+              </div>
 
-            <h3 class="text-lg font-semibold">Idekalina Elegan I</h3>
+              <h3 class="text-lg font-semibold">Idekalina Elegan I</h3>
 
-            <div class="mt-2">
-              <span class="text-idekabutton mr-2 text-lg font-bold"
-                >Rp 200.000</span
-              >
-              <span class="text-gray-500 line-through">Rp 400.000</span>
+              <div class="mt-2">
+                <span class="text-idekabutton mr-2 text-lg font-bold"
+                  >Rp 200.000</span
+                >
+                <span class="text-gray-500 line-through">Rp 400.000</span>
+              </div>
             </div>
           </div>
-        </div>
+        </a>
+        <!-- 3 -->
+        <a href="">
+          <div
+            class="relative overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
+          >
+            <img
+              src="https://pagedone.io/asset/uploads/1700726158.png"
+              alt="Produk 1"
+              class="w-full rounded-xl object-cover sm:h-64"
+            />
+            <div
+              class="bg-idekadiscn absolute top-3 left-3 rounded-full px-3 py-1 text-sm text-white"
+            >
+              50% off
+            </div>
+            <div class="p-4">
+              <div class="flex items-center justify-between">
+                <p class="text-sm text-gray-500">Undangan Digital</p>
+                <div class="flex items-center text-2xl text-yellow-500">
+                  <span>★</span>
+                  <span class="text-idekatext ml-1 text-xl font-semibold"
+                    >4.9</span
+                  >
+                </div>
+              </div>
 
-        <!-- Duplikat produk card lainnya -->
+              <h3 class="text-lg font-semibold">Idekalina Elegan I</h3>
 
-        <!-- Tambahkan lebih banyak card jika diperlukan -->
+              <div class="mt-2">
+                <span class="text-idekabutton mr-2 text-lg font-bold"
+                  >Rp 200.000</span
+                >
+                <span class="text-gray-500 line-through">Rp 400.000</span>
+              </div>
+            </div>
+          </div>
+        </a>
+        <!-- 4 -->
+        <a href="">
+          <div
+            class="relative overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
+          >
+            <img
+              src="https://pagedone.io/asset/uploads/1700726158.png"
+              alt="Produk 1"
+              class="w-full rounded-xl object-cover sm:h-64"
+            />
+            <div
+              class="bg-idekadiscn absolute top-3 left-3 rounded-full px-3 py-1 text-sm text-white"
+            >
+              50% off
+            </div>
+            <div class="p-4">
+              <div class="flex items-center justify-between">
+                <p class="text-sm text-gray-500">Undangan Digital</p>
+                <div class="flex items-center text-2xl text-yellow-500">
+                  <span>★</span>
+                  <span class="text-idekatext ml-1 text-xl font-semibold"
+                    >4.9</span
+                  >
+                </div>
+              </div>
+
+              <h3 class="text-lg font-semibold">Idekalina Elegan I</h3>
+
+              <div class="mt-2">
+                <span class="text-idekabutton mr-2 text-lg font-bold"
+                  >Rp 200.000</span
+                >
+                <span class="text-gray-500 line-through">Rp 400.000</span>
+              </div>
+            </div>
+          </div>
+        </a>
       </div>
     </section>
     <!-- end -->
