--- a/public/produk.html
+++ b/public/produk.html
@@ -103,156 +103,153 @@
       </div>
     </header>
     <!-- navbar end -->
-    <!-- start produk list -->
-    <section class="mt-3 py-24 md:mt-10">
-      <div
-        class="mx-auto mb-10 max-w-7xl px-2 text-4xl sm:px-21 sm:text-5xl md:max-w-2xl md:px-10 md:text-6xl lg:max-w-7xl"
-      >
-        <h2 class="font-dmserif mb-5">Produk Category</h2>
-        <!-- bradcrumd -->
+    <!-- produk category -->
+    <section
+      class="mt-6 max-w-86 py-24 pl-10 sm:max-w-full sm:px-10 md:max-w-5xl md:px-30 lg:px-5 xl:max-w-full xl:px-10"
+    >
+      <h2 class="font-dmserif mb-5 text-4xl sm:text-5xl md:text-6xl">
+        Produk Category
+      </h2>
 
-        <nav class="flex" aria-label="Breadcrumb">
-          <ol class="mb-5 inline-flex items-center space-x-1 md:space-x-3">
-            <li class="inline-flex items-center">
-              <a
-                href="index.html"
-                class="hover:text-idekabutton inline-flex items-center text-base font-medium"
+      <!-- bradcrumd -->
+
+      <nav class="flex" aria-label="Breadcrumb">
+        <ol class="inline-flex items-center space-x-1 md:space-x-3">
+          <li class="inline-flex items-center">
+            <a
+              href="index.html"
+              class="hover:text-idekabutton inline-flex items-center text-base font-medium"
+            >
+              Home
+            </a>
+          </li>
+          <li>
+            <div class="flex items-center">
+              <svg
+                class="mx-1 h-5 w-5"
+                viewBox="0 0 20 20"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
               >
-                Home
-              </a>
-            </li>
-            <li>
-              <div class="flex items-center">
-                <svg
-                  class="mx-1 h-5 w-5"
-                  viewBox="0 0 20 20"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M7.5 15L11.0858 11.4142C11.7525 10.7475 12.0858 10.4142 12.0858 10C12.0858 9.58579 11.7525 9.25245 11.0858 8.58579L7.5 5"
-                    stroke="#b58b75"
-                    stroke-width="1.6"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                </svg>
-                <a
-                  href="produk.html"
-                  class="hover:text-idekabutton text-idekabutton ml-1 text-base font-medium md:ml-2"
-                >
-                  Produk</a
-                >
-              </div>
-            </li>
-          </ol>
-        </nav>
-        <!-- end -->
-        <div class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-4">
-          <a
-            href="undangandigital.html"
-            class="group mx-auto cursor-pointer transition-all duration-500 sm:mr-0 lg:mx-auto"
+                <path
+                  d="M7.5 15L11.0858 11.4142C11.7525 10.7475 12.0858 10.4142 12.0858 10C12.0858 9.58579 11.7525 9.25245 11.0858 8.58579L7.5 5"
+                  stroke="#b58b75"
+                  stroke-width="1.6"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+              <a
+                href="produk.html"
+                class="hover:text-idekabutton ml-1 text-base font-medium md:ml-2"
+              >
+                Produk</a
+              >
+            </div>
+          </li>
+        </ol>
+      </nav>
+
+      <!-- section produk -->
+
+      <div
+        class="mx-auto mt-5 grid grid-cols-1 gap-8 sm:grid-cols-2 md:grid-cols-2 md:gap-14 lg:grid-cols-4 lg:gap-4 xl:gap-8"
+      >
+        <!-- Produk Card -->
+        <a href="undangandigital.html">
+          <div
+            class="relative overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
           >
-            <div class="">
-              <img
-                src="https://pagedone.io/asset/uploads/1700726158.png"
-                alt="face cream image"
-                class="aspect-square w-full transform rounded-2xl object-cover transition duration-300 ease-in-out hover:scale-105"
-              />
-            </div>
-            <div class="mt-5">
+            <img
+              src="https://pagedone.io/asset/uploads/1700726158.png"
+              alt="Produk 1"
+              class="w-full rounded-xl object-cover sm:h-64"
+            />
+            <div class="p-4 text-center">
+              <h3 class="hover:text-idekabuttonhover text-lg font-semibold">
+                Undangan Digital
+              </h3>
               <div class="flex items-center justify-between">
-                <h6
-                  class="group-hover:text-idekabuttonhover text-xl leading-8 font-semibold transition-all duration-500"
-                >
-                  Undangan Digital
-                </h6>
+                <p class="text-sm text-gray-500">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. At,
+                  nisi.
+                </p>
               </div>
-              <p class="mt-2 text-sm leading-6 font-normal text-gray-500">
-                template original dari dekalina
-              </p>
             </div>
-          </a>
-          <!-- next category -->
-          <a
-            href=""
-            class="group mx-auto cursor-pointer transition-all duration-500 sm:mr-0 lg:mx-auto"
+          </div>
+        </a>
+        <!-- 2 -->
+        <a href="">
+          <div
+            class="relative overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
           >
-            <div class="">
-              <img
-                src="https://pagedone.io/asset/uploads/1700726158.png"
-                alt="face cream image"
-                class="aspect-square w-full rounded-2xl object-cover transition duration-300 ease-in-out hover:scale-105"
-              />
-            </div>
-            <div class="mt-5">
+            <img
+              src="https://pagedone.io/asset/uploads/1700726158.png"
+              alt="Produk 1"
+              class="w-full rounded-xl object-cover sm:h-64"
+            />
+            <div class="p-4 text-center">
+              <h3 class="hover:text-idekabuttonhover text-lg font-semibold">
+                Digital Custom
+              </h3>
               <div class="flex items-center justify-between">
-                <h6
-                  class="group-hover:text-idekabuttonhover text-xl leading-8 font-semibold transition-all duration-500"
-                >
-                  Digital Custom
-                </h6>
+                <p class="text-sm text-gray-500">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. At,
+                  nisi.
+                </p>
               </div>
-              <p class="mt-2 text-sm leading-6 font-normal text-gray-500">
-                wujudkan desain impianmu sendiri
-              </p>
             </div>
-          </a>
-          <!-- next category -->
-          <a
-            href=""
-            class="group mx-auto cursor-pointer transition-all duration-500 sm:mr-0 lg:mx-auto"
+          </div>
+        </a>
+        <!-- 3 -->
+        <a href="">
+          <div
+            class="relative overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
           >
-            <div class="">
-              <img
-                src="https://pagedone.io/asset/uploads/1700726158.png"
-                alt="face cream image"
-                class="aspect-square w-full rounded-2xl object-cover transition duration-300 ease-in-out hover:scale-105"
-              />
-            </div>
-            <div class="mt-5">
+            <img
+              src="https://pagedone.io/asset/uploads/1700726158.png"
+              alt="Produk 1"
+              class="w-full rounded-xl object-cover sm:h-64"
+            />
+            <div class="p-4 text-center">
+              <h3 class="hover:text-idekabuttonhover text-lg font-semibold">
+                Undangan Fisik
+              </h3>
               <div class="flex items-center justify-between">
-                <h6
-                  class="group-hover:text-idekabuttonhover text-xl leading-8 font-semibold transition-all duration-500"
-                >
-                  Undangan Fisik
-                </h6>
+                <p class="text-sm text-gray-500">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. At,
+                  nisi.
+                </p>
               </div>
-              <p class="mt-2 text-sm leading-6 font-normal text-gray-500">
-                Lorem ipsum dolor sit amet.
-              </p>
             </div>
-          </a>
-          <!-- next category -->
-          <a
-            href=""
-            class="group mx-auto cursor-pointer transition-all duration-500 sm:mr-0 lg:mx-auto"
+          </div>
+        </a>
+        <!-- 4 -->
+        <a href="">
+          <div
+            class="relative overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
           >
-            <div class="">
-              <img
-                src="https://pagedone.io/asset/uploads/1700726158.png"
-                alt="face cream image"
-                class="aspect-square w-full rounded-2xl object-cover transition duration-300 ease-in-out hover:scale-105"
-              />
-            </div>
-            <div class="mt-5">
+            <img
+              src="https://pagedone.io/asset/uploads/1700726158.png"
+              alt="Produk 1"
+              class="w-full rounded-xl object-cover sm:h-64"
+            />
+            <div class="p-4 text-center">
+              <h3 class="hover:text-idekabuttonhover text-lg font-semibold">
+                Fisik Custom
+              </h3>
               <div class="flex items-center justify-between">
-                <h6
-                  class="group-hover:text-idekabuttonhover text-xl leading-8 font-semibold transition-all duration-500"
-                >
-                  Fisik Custom
-                </h6>
+                <p class="text-sm text-gray-500">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. At,
+                  nisi.
+                </p>
               </div>
-              <p class="mt-2 text-sm leading-6 font-normal text-gray-500">
-                Lorem ipsum dolor sit amet.
-              </p>
             </div>
-          </a>
-          <!-- end -->
-        </div>
+          </div>
+        </a>
       </div>
     </section>
-    <!-- end -->
+    <!-- end  -->
 
     <!-- Footer -->
     <footer class="bg-idekasecond w-full">
