--- a/public/undangandigital.html
+++ b/public/undangandigital.html
@@ -106,7 +106,7 @@
 
     <!-- produk undangan digital -->
     <section
-      class="mx-auto mt-6 max-w-86 px-4 py-24 sm:max-w-full sm:px-10 md:max-w-5xl md:px-30 lg:px-3 xl:max-w-full xl:px-10"
+      class="mt-6 max-w-86 py-24 pl-10 sm:max-w-full sm:px-10 md:max-w-5xl md:px-30 lg:px-5 xl:max-w-full xl:px-10"
     >
       <h2 class="font-dmserif mb-5 text-4xl sm:text-5xl md:text-6xl">
         Undangan Digital
@@ -176,7 +176,7 @@
       <!-- section produk -->
 
       <div
-        class="mt-5 grid grid-cols-1 gap-8 sm:grid-cols-2 md:grid-cols-2 md:gap-14 lg:grid-cols-4 lg:gap-4 xl:gap-8"
+        class="mx-auto mt-5 grid grid-cols-1 gap-8 sm:grid-cols-2 md:grid-cols-2 md:gap-14 lg:grid-cols-4 lg:gap-4 xl:gap-8"
       >
         <!-- Produk Card -->
         <a href="">
