--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
         <div class="relative flex items-center justify-between">
           <div class="">
             <a href="index.html">
-              <img src="img/Hero/logo.png" alt="" />
+              <img class="h-auto w-35 md:w-40" src="img/Hero/logo.png" alt="" />
             </a>
           </div>
           <div class="flex items-center">
@@ -60,7 +60,7 @@
               <ul class="block lg:flex lg:space-x-6 xl:space-x-8">
                 <li class="group">
                   <a
-                    class="group-hover:text-idekabuttonhover mx-8 flex py-6 text-base lg:mx-0 lg:text-lg"
+                    class="group-hover:text-idekabuttonhover text-idekabuttonhover mx-8 flex py-6 text-base lg:mx-0 lg:text-lg"
                     href="index.html"
                     >Home</a
                   >
@@ -104,7 +104,7 @@
     </header>
     <!-- navbar end -->
     <!-- Hero -->
-    <section id="home" class="pt-25 pb-28 md:pt-40 md:pb-16">
+    <section id="home" class="pt-23 pb-28 sm:pt-25 md:pb-16 lg:pt-36 xl:pt-30">
       <div
         class="container mx-auto flex flex-col-reverse items-center gap-6 md:gap-12 lg:flex-row lg:px-4"
       >
@@ -141,7 +141,7 @@
         </div>
 
         <!-- Image -->
-        <div class="w-10/12 md:w-max">
+        <div class="w-10/12 sm:w-4/5 lg:w-3/4 xl:w-7/12">
           <img src="img/Hero/hero.png" alt="Undangan Eksklusif" />
         </div>
       </div>
@@ -218,7 +218,7 @@
         >
           <div class="flex justify-center">
             <img
-              src="img/catalog/image0.png"
+              src="img/catalog/tumbnail.jpeg"
               alt="Minimalis Modern"
               class="h-55 w-60"
             />
@@ -240,7 +240,7 @@
         >
           <div class="flex justify-center">
             <img
-              src="img/catalog/image0.png"
+              src="img/catalog/tumbnail.jpeg"
               alt="Minimalis Modern"
               class="h-55 w-60"
             />
@@ -262,7 +262,7 @@
         >
           <div class="flex justify-center">
             <img
-              src="img/catalog/image0.png"
+              src="img/catalog/tumbnail.jpeg"
               alt="Minimalis Modern"
               class="h-55 w-60"
             />
@@ -284,7 +284,7 @@
         >
           <div class="flex justify-center">
             <img
-              src="img/catalog/image0.png"
+              src="img/catalog/tumbnail.jpeg"
               alt="Minimalis Modern"
               class="h-55 w-60"
             />
@@ -896,7 +896,11 @@
         >
           <div class="col-span-full mb-10 lg:col-span-2 lg:mb-0">
             <a href="index.html">
-              <img class="mx-auto lg:mx-0" src="img/Hero/logo.png" alt="" />
+              <img
+                class="mx-auto h-auto w-35 md:w-40 lg:mx-0"
+                src="img/Hero/logo.png"
+                alt=""
+              />
             </a>
 
             <p class="py-8 text-center text-sm lg:max-w-xs lg:text-left">
