--- a/public/produk.html
+++ b/public/produk.html
@@ -32,7 +32,7 @@
         <div class="relative flex items-center justify-between">
           <div class="">
             <a href="index.html">
-              <img src="img/Hero/logo.png" alt="" />
+              <img class="h-auto w-35 md:w-40" src="img/Hero/logo.png" alt="" />
             </a>
           </div>
           <div class="flex items-center">
@@ -67,7 +67,7 @@
                 </li>
                 <li class="group">
                   <a
-                    class="group-hover:text-idekabuttonhover mx-8 flex py-6 text-base lg:mx-0 lg:text-lg"
+                    class="text-idekabuttonhover mx-8 flex py-6 text-base lg:mx-0 lg:text-lg"
                     href="produk.html"
                     >Produk</a
                   >
@@ -141,7 +141,7 @@
               </svg>
               <a
                 href="produk.html"
-                class="hover:text-idekabutton ml-1 text-base font-medium md:ml-2"
+                class="text-idekabutton ml-1 text-base font-medium md:ml-2"
               >
                 Produk</a
               >
@@ -161,7 +161,7 @@
             class="relative overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
           >
             <img
-              src="https://pagedone.io/asset/uploads/1700726158.png"
+              src="img/catalog/tumbnail.jpeg"
               alt="Produk 1"
               class="w-full rounded-xl object-cover sm:h-64"
             />
@@ -179,18 +179,18 @@
           </div>
         </a>
         <!-- 2 -->
-        <a href="">
+        <a href="undangandigital.html">
           <div
             class="relative overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
           >
             <img
-              src="https://pagedone.io/asset/uploads/1700726158.png"
+              src="img/catalog/tumbnail.jpeg"
               alt="Produk 1"
               class="w-full rounded-xl object-cover sm:h-64"
             />
             <div class="p-4 text-center">
               <h3 class="hover:text-idekabuttonhover text-lg font-semibold">
-                Digital Custom
+                Undangan Digital
               </h3>
               <div class="flex items-center justify-between">
                 <p class="text-sm text-gray-500">
@@ -202,18 +202,18 @@
           </div>
         </a>
         <!-- 3 -->
-        <a href="">
+        <a href="undangandigital.html">
           <div
             class="relative overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
           >
             <img
-              src="https://pagedone.io/asset/uploads/1700726158.png"
+              src="img/catalog/tumbnail.jpeg"
               alt="Produk 1"
               class="w-full rounded-xl object-cover sm:h-64"
             />
             <div class="p-4 text-center">
               <h3 class="hover:text-idekabuttonhover text-lg font-semibold">
-                Undangan Fisik
+                Undangan Digital
               </h3>
               <div class="flex items-center justify-between">
                 <p class="text-sm text-gray-500">
@@ -225,18 +225,18 @@
           </div>
         </a>
         <!-- 4 -->
-        <a href="">
+        <a href="undangandigital.html">
           <div
             class="relative overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
           >
             <img
-              src="https://pagedone.io/asset/uploads/1700726158.png"
+              src="img/catalog/tumbnail.jpeg"
               alt="Produk 1"
               class="w-full rounded-xl object-cover sm:h-64"
             />
             <div class="p-4 text-center">
               <h3 class="hover:text-idekabuttonhover text-lg font-semibold">
-                Fisik Custom
+                Undangan Digital
               </h3>
               <div class="flex items-center justify-between">
                 <p class="text-sm text-gray-500">
@@ -260,7 +260,11 @@
         >
           <div class="col-span-full mb-10 lg:col-span-2 lg:mb-0">
             <a href="index.html">
-              <img class="mx-auto lg:mx-0" src="img/Hero/logo.png" alt="" />
+              <img
+                class="mx-auto h-auto w-35 md:w-40 lg:mx-0"
+                src="img/Hero/logo.png"
+                alt=""
+              />
             </a>
 
             <p class="py-8 text-center text-sm lg:max-w-xs lg:text-left">
