--- a/public/undangandigital.html
+++ b/public/undangandigital.html
@@ -32,7 +32,7 @@
         <div class="relative flex items-center justify-between">
           <div class="">
             <a href="index.html">
-              <img src="img/Hero/logo.png" alt="" />
+              <img class="h-auto w-35 md:w-40" src="img/Hero/logo.png" alt="" />
             </a>
           </div>
           <div class="flex items-center">
@@ -184,7 +184,7 @@
             class="relative overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
           >
             <img
-              src="https://pagedone.io/asset/uploads/1700726158.png"
+              src="img/catalog/tumbnail.jpeg"
               alt="Produk 1"
               class="w-full rounded-xl object-cover sm:h-64"
             />
@@ -221,7 +221,7 @@
             class="relative overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
           >
             <img
-              src="https://pagedone.io/asset/uploads/1700726158.png"
+              src="img/catalog/tumbnail.jpeg"
               alt="Produk 1"
               class="w-full rounded-xl object-cover sm:h-64"
             />
@@ -258,7 +258,7 @@
             class="relative overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
           >
             <img
-              src="https://pagedone.io/asset/uploads/1700726158.png"
+              src="img/catalog/tumbnail.jpeg"
               alt="Produk 1"
               class="w-full rounded-xl object-cover sm:h-64"
             />
@@ -295,7 +295,7 @@
             class="relative overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
           >
             <img
-              src="https://pagedone.io/asset/uploads/1700726158.png"
+              src="img/catalog/tumbnail.jpeg"
               alt="Produk 1"
               class="w-full rounded-xl object-cover sm:h-64"
             />
@@ -339,7 +339,11 @@
         >
           <div class="col-span-full mb-10 lg:col-span-2 lg:mb-0">
             <a href="index.html">
-              <img class="mx-auto lg:mx-0" src="img/Hero/logo.png" alt="" />
+              <img
+                class="mx-auto h-auto w-35 md:w-40 lg:mx-0"
+                src="img/Hero/logo.png"
+                alt=""
+              />
             </a>
 
             <p class="py-8 text-center text-sm lg:max-w-xs lg:text-left">
