--- a/public/produk.html
+++ b/public/produk.html
@@ -105,7 +105,7 @@
     <!-- navbar end -->
     <!-- produk category -->
     <section
-      class="mt-6 max-w-86 py-24 pl-10 sm:max-w-full sm:px-10 md:max-w-5xl md:px-30 lg:px-5 xl:max-w-full xl:px-10"
+      class="mt-6 max-w-86 py-24 pl-10 sm:max-w-full sm:px-10 md:max-w-5xl md:px-30 lg:max-w-11/12 lg:px-5 xl:max-w-full xl:px-10"
     >
       <h2 class="font-dmserif mb-5 text-4xl sm:text-5xl md:text-6xl">
         Produk Category
@@ -153,17 +153,17 @@
       <!-- section produk -->
 
       <div
-        class="mx-auto mt-5 grid grid-cols-1 gap-8 sm:grid-cols-2 md:grid-cols-2 md:gap-14 lg:grid-cols-4 lg:gap-4 xl:gap-8"
+        class="mx-auto mt-5 grid grid-cols-1 gap-8 sm:grid-cols-2 md:grid-cols-2 md:gap-14 lg:grid-cols-3 lg:gap-30 xl:grid-cols-4 xl:gap-8"
       >
         <!-- Produk Card -->
         <a href="undangandigital.html">
           <div
-            class="relative overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
+            class="relative h-100 w-70 overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
           >
             <img
               src="img/catalog/tumbnail.jpeg"
               alt="Produk 1"
-              class="w-full rounded-xl object-cover sm:h-64"
+              class="h-auto w-full rounded-xl object-cover"
             />
             <div class="p-4 text-center">
               <h3 class="hover:text-idekabuttonhover text-lg font-semibold">
@@ -178,15 +178,16 @@
             </div>
           </div>
         </a>
+
         <!-- 2 -->
         <a href="undangandigital.html">
           <div
-            class="relative overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
+            class="relative h-100 w-70 overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
           >
             <img
               src="img/catalog/tumbnail.jpeg"
               alt="Produk 1"
-              class="w-full rounded-xl object-cover sm:h-64"
+              class="h-auto w-full rounded-xl object-cover"
             />
             <div class="p-4 text-center">
               <h3 class="hover:text-idekabuttonhover text-lg font-semibold">
@@ -204,12 +205,12 @@
         <!-- 3 -->
         <a href="undangandigital.html">
           <div
-            class="relative overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
+            class="relative h-100 w-70 overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
           >
             <img
               src="img/catalog/tumbnail.jpeg"
               alt="Produk 1"
-              class="w-full rounded-xl object-cover sm:h-64"
+              class="h-auto w-full rounded-xl object-cover"
             />
             <div class="p-4 text-center">
               <h3 class="hover:text-idekabuttonhover text-lg font-semibold">
@@ -227,12 +228,12 @@
         <!-- 4 -->
         <a href="undangandigital.html">
           <div
-            class="relative overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
+            class="relative h-100 w-70 overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
           >
             <img
               src="img/catalog/tumbnail.jpeg"
               alt="Produk 1"
-              class="w-full rounded-xl object-cover sm:h-64"
+              class="h-auto w-full rounded-xl object-cover"
             />
             <div class="p-4 text-center">
               <h3 class="hover:text-idekabuttonhover text-lg font-semibold">
@@ -315,7 +316,9 @@
             <h4 class="mb-7 text-lg font-medium">Produk</h4>
             <ul class="text-sm transition-all duration-500">
               <li class="mb-2 md:mb-4">
-                <a href="" class="hover:text-idekabuttonhover"
+                <a
+                  href="undangandigital.html"
+                  class="hover:text-idekabuttonhover"
                   >Undangan Digital</a
                 >
               </li>
