--- a/public/index.html
+++ b/public/index.html
@@ -951,7 +951,9 @@
             <h4 class="mb-7 text-lg font-medium">Produk</h4>
             <ul class="text-sm transition-all duration-500">
               <li class="mb-2 md:mb-4">
-                <a href="" class="hover:text-idekabuttonhover"
+                <a
+                  href="undangandigital.html"
+                  class="hover:text-idekabuttonhover"
                   >Undangan Digital</a
                 >
               </li>
