--- a/public/undangandigital.html
+++ b/public/undangandigital.html
@@ -106,7 +106,7 @@
 
     <!-- produk undangan digital -->
     <section
-      class="mt-6 max-w-86 py-24 pl-10 sm:max-w-full sm:px-10 md:max-w-5xl md:px-30 lg:px-5 xl:max-w-full xl:px-10"
+      class="mt-6 max-w-86 py-24 pl-10 sm:max-w-full sm:px-10 md:max-w-5xl md:px-30 lg:max-w-11/12 lg:px-5 xl:max-w-full xl:px-10"
     >
       <h2 class="font-dmserif mb-5 text-4xl sm:text-5xl md:text-6xl">
         Undangan Digital
@@ -176,156 +176,204 @@
       <!-- section produk -->
 
       <div
-        class="mx-auto mt-5 grid grid-cols-1 gap-8 sm:grid-cols-2 md:grid-cols-2 md:gap-14 lg:grid-cols-4 lg:gap-4 xl:gap-8"
+        class="mx-auto mt-5 grid grid-cols-1 gap-8 sm:grid-cols-2 md:grid-cols-2 md:gap-14 lg:grid-cols-3 lg:gap-30 xl:grid-cols-4 xl:gap-8"
       >
         <!-- Produk Card -->
-        <a href="">
+        <div
+          class="relative h-auto w-70 overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
+        >
+          <img
+            src="img/catalog/tumbnail.jpeg"
+            alt="Produk 1"
+            class="h-auto w-full rounded-xl object-cover"
+          />
           <div
-            class="relative overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
+            class="bg-idekadiscn absolute top-3 left-3 rounded-full px-3 py-1 text-sm text-white"
           >
-            <img
-              src="img/catalog/tumbnail.jpeg"
-              alt="Produk 1"
-              class="w-full rounded-xl object-cover sm:h-64"
-            />
-            <div
-              class="bg-idekadiscn absolute top-3 left-3 rounded-full px-3 py-1 text-sm text-white"
-            >
-              50% off
-            </div>
-            <div class="p-4">
-              <div class="flex items-center justify-between">
-                <p class="text-sm text-gray-500">Undangan Digital</p>
-                <div class="flex items-center text-2xl text-yellow-500">
-                  <span>★</span>
-                  <span class="text-idekatext ml-1 text-xl font-semibold"
-                    >4.9</span
-                  >
-                </div>
-              </div>
-
-              <h3 class="text-lg font-semibold">Idekalina Elegan I</h3>
-
-              <div class="mt-2">
-                <span class="text-idekabutton mr-2 text-lg font-bold"
-                  >Rp 200.000</span
+            50% off
+          </div>
+          <div class="p-4">
+            <div class="flex items-center justify-between">
+              <p class="text-sm text-gray-500">Undangan Digital</p>
+              <div class="flex items-center text-2xl text-yellow-500">
+                <span>★</span>
+                <span class="text-idekatext ml-1 text-xl font-semibold"
+                  >4.9</span
                 >
-                <span class="text-gray-500 line-through">Rp 400.000</span>
               </div>
+            </div>
+
+            <h3 class="text-lg font-semibold">Idekalina Elegan I</h3>
+
+            <div class="my-2">
+              <span class="text-idekabutton mr-2 text-lg font-bold"
+                >Rp 200.000</span
+              >
+              <span class="text-gray-500 line-through">Rp 400.000</span>
+            </div>
+            <div class="mt-4 mb-1">
+              <a
+                href=""
+                class="hover:bg-idekabuttonhover border-idekabutton text-idekatext mr-1 rounded-full border px-4 py-2 transition hover:text-white"
+              >
+                Demo</a
+              >
+              <a
+                href=""
+                class="bg-idekabutton hover:bg-idekabuttonhover rounded-full px-4 py-2 text-white transition"
+              >
+                Beli Sekarang
+              </a>
             </div>
           </div>
-        </a>
+        </div>
         <!-- 2 -->
-        <a href="">
+        <div
+          class="relative h-auto w-70 overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
+        >
+          <img
+            src="img/catalog/tumbnail.jpeg"
+            alt="Produk 1"
+            class="h-auto w-full rounded-xl object-cover"
+          />
           <div
-            class="relative overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
+            class="bg-idekadiscn absolute top-3 left-3 rounded-full px-3 py-1 text-sm text-white"
           >
-            <img
-              src="img/catalog/tumbnail.jpeg"
-              alt="Produk 1"
-              class="w-full rounded-xl object-cover sm:h-64"
-            />
-            <div
-              class="bg-idekadiscn absolute top-3 left-3 rounded-full px-3 py-1 text-sm text-white"
-            >
-              50% off
-            </div>
-            <div class="p-4">
-              <div class="flex items-center justify-between">
-                <p class="text-sm text-gray-500">Undangan Digital</p>
-                <div class="flex items-center text-2xl text-yellow-500">
-                  <span>★</span>
-                  <span class="text-idekatext ml-1 text-xl font-semibold"
-                    >4.9</span
-                  >
-                </div>
-              </div>
-
-              <h3 class="text-lg font-semibold">Idekalina Elegan I</h3>
-
-              <div class="mt-2">
-                <span class="text-idekabutton mr-2 text-lg font-bold"
-                  >Rp 200.000</span
+            50% off
+          </div>
+          <div class="p-4">
+            <div class="flex items-center justify-between">
+              <p class="text-sm text-gray-500">Undangan Digital</p>
+              <div class="flex items-center text-2xl text-yellow-500">
+                <span>★</span>
+                <span class="text-idekatext ml-1 text-xl font-semibold"
+                  >4.9</span
                 >
-                <span class="text-gray-500 line-through">Rp 400.000</span>
               </div>
+            </div>
+
+            <h3 class="text-lg font-semibold">Idekalina Elegan I</h3>
+
+            <div class="my-2">
+              <span class="text-idekabutton mr-2 text-lg font-bold"
+                >Rp 200.000</span
+              >
+              <span class="text-gray-500 line-through">Rp 400.000</span>
+            </div>
+            <div class="mt-4 mb-1">
+              <a
+                href=""
+                class="hover:bg-idekabuttonhover border-idekabutton text-idekatext mr-1 rounded-full border px-4 py-2 transition hover:text-white"
+              >
+                Demo</a
+              >
+              <a
+                href=""
+                class="bg-idekabutton hover:bg-idekabuttonhover rounded-full px-4 py-2 text-white transition"
+              >
+                Beli Sekarang
+              </a>
             </div>
           </div>
-        </a>
+        </div>
         <!-- 3 -->
-        <a href="">
+        <div
+          class="relative h-auto w-70 overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
+        >
+          <img
+            src="img/catalog/tumbnail.jpeg"
+            alt="Produk 1"
+            class="h-auto w-full rounded-xl object-cover"
+          />
           <div
-            class="relative overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
+            class="bg-idekadiscn absolute top-3 left-3 rounded-full px-3 py-1 text-sm text-white"
           >
-            <img
-              src="img/catalog/tumbnail.jpeg"
-              alt="Produk 1"
-              class="w-full rounded-xl object-cover sm:h-64"
-            />
-            <div
-              class="bg-idekadiscn absolute top-3 left-3 rounded-full px-3 py-1 text-sm text-white"
-            >
-              50% off
-            </div>
-            <div class="p-4">
-              <div class="flex items-center justify-between">
-                <p class="text-sm text-gray-500">Undangan Digital</p>
-                <div class="flex items-center text-2xl text-yellow-500">
-                  <span>★</span>
-                  <span class="text-idekatext ml-1 text-xl font-semibold"
-                    >4.9</span
-                  >
-                </div>
-              </div>
-
-              <h3 class="text-lg font-semibold">Idekalina Elegan I</h3>
-
-              <div class="mt-2">
-                <span class="text-idekabutton mr-2 text-lg font-bold"
-                  >Rp 200.000</span
+            50% off
+          </div>
+          <div class="p-4">
+            <div class="flex items-center justify-between">
+              <p class="text-sm text-gray-500">Undangan Digital</p>
+              <div class="flex items-center text-2xl text-yellow-500">
+                <span>★</span>
+                <span class="text-idekatext ml-1 text-xl font-semibold"
+                  >4.9</span
                 >
-                <span class="text-gray-500 line-through">Rp 400.000</span>
               </div>
+            </div>
+
+            <h3 class="text-lg font-semibold">Idekalina Elegan I</h3>
+
+            <div class="my-2">
+              <span class="text-idekabutton mr-2 text-lg font-bold"
+                >Rp 200.000</span
+              >
+              <span class="text-gray-500 line-through">Rp 400.000</span>
+            </div>
+            <div class="mt-4 mb-1">
+              <a
+                href=""
+                class="hover:bg-idekabuttonhover border-idekabutton text-idekatext mr-1 rounded-full border px-4 py-2 transition hover:text-white"
+              >
+                Demo</a
+              >
+              <a
+                href=""
+                class="bg-idekabutton hover:bg-idekabuttonhover rounded-full px-4 py-2 text-white transition"
+              >
+                Beli Sekarang
+              </a>
             </div>
           </div>
-        </a>
+        </div>
         <!-- 4 -->
-        <a href="">
+        <div
+          class="relative h-auto w-70 overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
+        >
+          <img
+            src="img/catalog/tumbnail.jpeg"
+            alt="Produk 1"
+            class="h-auto w-full rounded-xl object-cover"
+          />
           <div
-            class="relative overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
+            class="bg-idekadiscn absolute top-3 left-3 rounded-full px-3 py-1 text-sm text-white"
           >
-            <img
-              src="img/catalog/tumbnail.jpeg"
-              alt="Produk 1"
-              class="w-full rounded-xl object-cover sm:h-64"
-            />
-            <div
-              class="bg-idekadiscn absolute top-3 left-3 rounded-full px-3 py-1 text-sm text-white"
-            >
-              50% off
-            </div>
-            <div class="p-4">
-              <div class="flex items-center justify-between">
-                <p class="text-sm text-gray-500">Undangan Digital</p>
-                <div class="flex items-center text-2xl text-yellow-500">
-                  <span>★</span>
-                  <span class="text-idekatext ml-1 text-xl font-semibold"
-                    >4.9</span
-                  >
-                </div>
-              </div>
-
-              <h3 class="text-lg font-semibold">Idekalina Elegan I</h3>
-
-              <div class="mt-2">
-                <span class="text-idekabutton mr-2 text-lg font-bold"
-                  >Rp 200.000</span
+            50% off
+          </div>
+          <div class="p-4">
+            <div class="flex items-center justify-between">
+              <p class="text-sm text-gray-500">Undangan Digital</p>
+              <div class="flex items-center text-2xl text-yellow-500">
+                <span>★</span>
+                <span class="text-idekatext ml-1 text-xl font-semibold"
+                  >4.9</span
                 >
-                <span class="text-gray-500 line-through">Rp 400.000</span>
               </div>
+            </div>
+
+            <h3 class="text-lg font-semibold">Idekalina Elegan I</h3>
+
+            <div class="my-2">
+              <span class="text-idekabutton mr-2 text-lg font-bold"
+                >Rp 200.000</span
+              >
+              <span class="text-gray-500 line-through">Rp 400.000</span>
+            </div>
+            <div class="mt-4 mb-1">
+              <a
+                href=""
+                class="hover:bg-idekabuttonhover border-idekabutton text-idekatext mr-1 rounded-full border px-4 py-2 transition hover:text-white"
+              >
+                Demo</a
+              >
+              <a
+                href=""
+                class="bg-idekabutton hover:bg-idekabuttonhover rounded-full px-4 py-2 text-white transition"
+              >
+                Beli Sekarang
+              </a>
             </div>
           </div>
-        </a>
+        </div>
       </div>
     </section>
     <!-- end -->
