--- a/public/undangandigital.html
+++ b/public/undangandigital.html
@@ -213,13 +213,14 @@
             </div>
             <div class="mt-4 mb-1">
               <a
-                href=""
+                href="desain01.html"
                 class="hover:bg-idekabuttonhover border-idekabutton text-idekatext mr-1 rounded-full border px-4 py-2 transition hover:text-white"
               >
                 Demo</a
               >
               <a
-                href=""
+                href="https://wa.me/6281235962004?text=Halo%20Idekalina,%20saya%20ingin%20menanyakan%20soal%20undangan%20digital%20Desain01"
+                target="_blank"
                 class="bg-idekabutton hover:bg-idekabuttonhover rounded-full px-4 py-2 text-white transition"
               >
                 Beli Sekarang
