--- a/public/undangandigital.html
+++ b/public/undangandigital.html
@@ -197,13 +197,13 @@
               <p class="text-sm text-gray-500">Undangan Digital</p>
               <div class="flex items-center text-2xl text-yellow-500">
                 <span>★</span>
-                <span class="text-idekatext ml-1 text-xl font-semibold"
+                <span class="text-idekabutton ml-1 text-xl font-semibold"
                   >4.9</span
                 >
               </div>
             </div>
 
-            <h3 class="text-lg font-semibold">Idekalina Elegan I</h3>
+            <h3 class="text-lg font-semibold">Idekalina Desain01</h3>
 
             <div class="my-2">
               <span class="text-idekabutton mr-2 text-lg font-bold"
@@ -214,7 +214,8 @@
             <div class="mt-4 mb-1">
               <a
                 href="desain01.html"
-                class="hover:bg-idekabuttonhover border-idekabutton text-idekatext mr-1 rounded-full border px-4 py-2 transition hover:text-white"
+                class="hover:bg-idekabuttonhover border-idekabutton text-idekabutton mr-1 rounded-full border px-4 py-2 transition hover:text-white"
+                target="_blank"
               >
                 Demo</a
               >
@@ -264,7 +265,7 @@
             <div class="mt-4 mb-1">
               <a
                 href=""
-                class="hover:bg-idekabuttonhover border-idekabutton text-idekatext mr-1 rounded-full border px-4 py-2 transition hover:text-white"
+                class="hover:bg-idekabuttonhover border-idekabutton text-idekabutton mr-1 rounded-full border px-4 py-2 transition hover:text-white"
               >
                 Demo</a
               >
@@ -313,7 +314,7 @@
             <div class="mt-4 mb-1">
               <a
                 href=""
-                class="hover:bg-idekabuttonhover border-idekabutton text-idekatext mr-1 rounded-full border px-4 py-2 transition hover:text-white"
+                class="hover:bg-idekabuttonhover border-idekabutton text-idekabutton mr-1 rounded-full border px-4 py-2 transition hover:text-white"
               >
                 Demo</a
               >
@@ -362,7 +363,7 @@
             <div class="mt-4 mb-1">
               <a
                 href=""
-                class="hover:bg-idekabuttonhover border-idekabutton text-idekatext mr-1 rounded-full border px-4 py-2 transition hover:text-white"
+                class="hover:bg-idekabuttonhover border-idekabutton text-idekabutton mr-1 rounded-full border px-4 py-2 transition hover:text-white"
               >
                 Demo</a
               >
